# Scriptorium

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: companies.csv
src/: app.py  cache.json  config.py  logger_config.json  main.py  test_.py  utils.py
src/backup/: cache.json  data_0.xlsx
src/logger/: config.json  setup.py
