[project]
name = "scriptorium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4==4.14.3",
  "pandas==2.3.3",
  "openpyxl==3.1.5",
  "playwright==1.56.0",
  "pytest==9.0.1",
  "coverage==7.12.0",
  "pytest-cov==7.0.0",
]

